[package]
name = "judge"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "24.0.0"
log = "0.4.17"
simple_logger = "4.2.0"
systemd-journal-logger = "1.0.0"
rand ="0.8.4"
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = "0.4.31"
whoami = "1.4.1"
sha256 = "1.4.0"
termimad = "0.25.2"
cliclack = "0.1.8"

scoreboard_db = { path = "../scoreboard_db" }
