[package]
name = "judge"
version = "2.2.9"
edition = "2021"
authors = ["Philip Barlow"]
description = "Tool for an in house code challenge server"
license = "MIT"
repository = "https://github.com/bitbrain-za/judge"
homepage = "https://github.com/bitbrain-za/judge"
readme = "README.md"

[dependencies]
mysql = "24.0.0"
log = "0.4.17"
simple_logger = "4.2.0"
systemd-journal-logger = "2.0.0"
rand = "0.8.4"
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = "0.4.31"
whoami = "1.4.1"
sha256 = "1.4.0"
termimad = "0.25.2"
cliclack = "0.1.8"
envcrypt = "0.5.0"
scoreboard_db = { version = "0.2.1", features = ["database"] }
